--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.21.2",
     "express": "^4.17.1",
+    "pg": "^8.4.0",
+    "typeorm": "^0.2.28",
     "uuidv4": "^6.2.3"
   },
   "devDependencies": {
