--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-plugin-import": "^2.21.2",
     "express": "^4.17.1",
     "pg": "^8.4.0",
+    "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.28",
     "uuidv4": "^6.2.3"
   },
